--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,12 +5,12 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-4.95MB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-417.1KB/s(Youtube:不良林), server: 51.81.223.32, port: 443, type: vmess, uuid: c0156451-4efb-45e2-84fc-8d315c4650db, alterId: 32, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-1.38MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32000, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-5.07MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34001, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-3.09MB/s(Youtube:不良林), server: in-tw-2.onebox6.org, port: 38201, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: in-tw-2.onebox6.org}}
-  - {name: 🇺🇸 美国-2.67MB/s(Youtube:不良林), server: xr-1.herokuapp.com, port: 443, type: vmess, uuid: 17af76e1-a5d7-41ab-ae87-b48f185075d1, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /17af76e1-a5d7-41ab-ae87-b48f185075d1-vmess, ws-headers: {Host: xr-1.herokuapp.com}}
+  - {name: 🇨🇳 中国-597.8KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32003, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-2.06MB/s(Youtube:不良林), server: cmjm.julvab.com, port: 30718, type: ssr, cipher: chacha20-ietf, password: download.microso, protocol: auth_aes128_sha1, obfs: http_simple, protocol-param: 4576:Y0G6hg, obfs-param: fc9ba4576.download.microsoft.com}
+  - {name: 🇰🇷 韩国-5.16MB/s(Youtube:不良林), server: 152.67.223.187, port: 13774, type: vmess, uuid: 5da35e16-0af7-47cc-ed73-269824ccb1a2, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇸🇬 新加坡-3.57MB/s(Youtube:不良林), server: bai-piao-wang-zhe.us.567568.ml, port: 19568, type: trojan, password: AglrNchEnS, sni: bai-piao-wang-zhe.us.567568.ml, skip-cert-verify: true}
+  - {name: 🇸🇬 新加坡-3.70MB/s(Youtube:不良林), server: sg-03.licom.ml, port: 8443, type: trojan, password: ce433528-39fa-4711-bc0d-25a5b1579574, sni: sg-03.licom.ml, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-3.97MB/s(Youtube:不良林), server: xr-1.herokuapp.com, port: 443, type: vmess, uuid: 17af76e1-a5d7-41ab-ae87-b48f185075d1, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /17af76e1-a5d7-41ab-ae87-b48f185075d1-vmess, ws-headers: {Host: xr-1.herokuapp.com}}
   - {name: 🇺🇸 美国-1.98MB/s(Youtube:不良林), server: vus4.0bad.com, port: 443, type: vmess, uuid: 927094d3-d678-4763-8591-e240d0bcae87, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /chat, ws-headers: {Host: vus4.0bad.com}}
   - {name: 🇺🇸 美国-3.12MB/s(Youtube:不良林), server: 138.2.49.230, port: 10021, type: vmess, uuid: a12e496e-f89a-434a-8011-108846f0e412, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 138.2.49.230}}
   - {name: 🇺🇸 美国-4.89MB/s(Youtube:不良林), server: vus2.0bad.com, port: 443, type: vmess, uuid: 927094d3-d678-4763-8591-e240d0bcae87, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /chat, ws-headers: {Host: vus2.0bad.com}}
@@ -21,12 +21,12 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-4.95MB/s(Youtube:不良林)
-      - 🇺🇸 美国-417.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.38MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.07MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.09MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.67MB/s(Youtube:不良林)
+      - 🇨🇳 中国-597.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.06MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-5.16MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.57MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.70MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.97MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.98MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.12MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.89MB/s(Youtube:不良林)
@@ -36,12 +36,12 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-4.95MB/s(Youtube:不良林)
-      - 🇺🇸 美国-417.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.38MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.07MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.09MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.67MB/s(Youtube:不良林)
+      - 🇨🇳 中国-597.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.06MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-5.16MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.57MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.70MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.97MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.98MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.12MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.89MB/s(Youtube:不良林)
@@ -52,12 +52,12 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-4.95MB/s(Youtube:不良林)
-      - 🇺🇸 美国-417.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.38MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.07MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.09MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.67MB/s(Youtube:不良林)
+      - 🇨🇳 中国-597.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.06MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-5.16MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.57MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.70MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.97MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.98MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.12MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.89MB/s(Youtube:不良林)
@@ -72,12 +72,12 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-4.95MB/s(Youtube:不良林)
-      - 🇺🇸 美国-417.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.38MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.07MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.09MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.67MB/s(Youtube:不良林)
+      - 🇨🇳 中国-597.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.06MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-5.16MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.57MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.70MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.97MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.98MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.12MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.89MB/s(Youtube:不良林)
@@ -87,12 +87,12 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-4.95MB/s(Youtube:不良林)
-      - 🇺🇸 美国-417.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.38MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.07MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.09MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.67MB/s(Youtube:不良林)
+      - 🇨🇳 中国-597.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.06MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-5.16MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.57MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.70MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.97MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.98MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.12MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.89MB/s(Youtube:不良林)
@@ -103,12 +103,12 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-4.95MB/s(Youtube:不良林)
-      - 🇺🇸 美国-417.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.38MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.07MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.09MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.67MB/s(Youtube:不良林)
+      - 🇨🇳 中国-597.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.06MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-5.16MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.57MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.70MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.97MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.98MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.12MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.89MB/s(Youtube:不良林)
@@ -128,12 +128,12 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-4.95MB/s(Youtube:不良林)
-      - 🇺🇸 美国-417.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.38MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.07MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.09MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.67MB/s(Youtube:不良林)
+      - 🇨🇳 中国-597.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.06MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-5.16MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.57MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.70MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.97MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.98MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.12MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.89MB/s(Youtube:不良林)
