--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,15 +5,15 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-597.8KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32003, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-2.06MB/s(Youtube:不良林), server: cmjm.julvab.com, port: 30718, type: ssr, cipher: chacha20-ietf, password: download.microso, protocol: auth_aes128_sha1, obfs: http_simple, protocol-param: 4576:Y0G6hg, obfs-param: fc9ba4576.download.microsoft.com}
-  - {name: 🇰🇷 韩国-5.16MB/s(Youtube:不良林), server: 152.67.223.187, port: 13774, type: vmess, uuid: 5da35e16-0af7-47cc-ed73-269824ccb1a2, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇸🇬 新加坡-3.57MB/s(Youtube:不良林), server: bai-piao-wang-zhe.us.567568.ml, port: 19568, type: trojan, password: AglrNchEnS, sni: bai-piao-wang-zhe.us.567568.ml, skip-cert-verify: true}
-  - {name: 🇸🇬 新加坡-3.70MB/s(Youtube:不良林), server: sg-03.licom.ml, port: 8443, type: trojan, password: ce433528-39fa-4711-bc0d-25a5b1579574, sni: sg-03.licom.ml, skip-cert-verify: true}
+  - {name: 捷克-2.14MB/s(Youtube:不良林), server: 195.133.53.192, port: 14369, type: vmess, uuid: 2331affa-1194-45ae-9457-3746120c4751, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 195.133.53.192}}
+  - {name: 🇨🇳 中国-4.56MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32001, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-12.15MB/s(Youtube:不良林), server: vjp3.0bad.com, port: 443, type: vmess, uuid: 927094d3-d678-4763-8591-e240d0bcae87, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /chat, ws-headers: {Host: vjp3.0bad.com}}
+  - {name: 🇨🇳 台湾-1019.6KB/s(Youtube:不良林), server: lc-hk03-direct01.lc-hk03.lc-node.com, port: 443, type: vmess, uuid: ec736482-173e-3eff-9114-b49df8056e7d, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: lc-hk03-direct01.lc-hk03.lc-node.com}}
+  - {name: 🇬🇧 英国-2.20MB/s(Youtube:不良林), server: 144.24.88.101, port: 16833, type: vmess, uuid: f5425ccf-3946-4fb4-eb24-5393d78a392f, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
   - {name: 🇺🇸 美国-3.97MB/s(Youtube:不良林), server: xr-1.herokuapp.com, port: 443, type: vmess, uuid: 17af76e1-a5d7-41ab-ae87-b48f185075d1, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /17af76e1-a5d7-41ab-ae87-b48f185075d1-vmess, ws-headers: {Host: xr-1.herokuapp.com}}
-  - {name: 🇺🇸 美国-1.98MB/s(Youtube:不良林), server: vus4.0bad.com, port: 443, type: vmess, uuid: 927094d3-d678-4763-8591-e240d0bcae87, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /chat, ws-headers: {Host: vus4.0bad.com}}
+  - {name: 🇺🇸 美国-4.29MB/s(Youtube:不良林), server: vus4.0bad.com, port: 443, type: vmess, uuid: 927094d3-d678-4763-8591-e240d0bcae87, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /chat, ws-headers: {Host: vus4.0bad.com}}
   - {name: 🇺🇸 美国-3.12MB/s(Youtube:不良林), server: 138.2.49.230, port: 10021, type: vmess, uuid: a12e496e-f89a-434a-8011-108846f0e412, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 138.2.49.230}}
-  - {name: 🇺🇸 美国-4.89MB/s(Youtube:不良林), server: vus2.0bad.com, port: 443, type: vmess, uuid: 927094d3-d678-4763-8591-e240d0bcae87, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /chat, ws-headers: {Host: vus2.0bad.com}}
+  - {name: 🇺🇸 美国-5.01MB/s(Youtube:不良林), server: vus2.0bad.com, port: 443, type: vmess, uuid: 927094d3-d678-4763-8591-e240d0bcae87, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /chat, ws-headers: {Host: vus2.0bad.com}}
   - {name: 🇺🇸 美国-5.45MB/s(Youtube:不良林), server: trus.moonfree.top, port: 443, type: trojan, password: 4863e1b2-ec2f-4c71-b862-ce533028e57e, sni: trus.moonfree.top, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
@@ -21,30 +21,30 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-597.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.06MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-5.16MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.57MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.70MB/s(Youtube:不良林)
+      - 捷克-2.14MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.56MB/s(Youtube:不良林)
+      - 🇯🇵 日本-12.15MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1019.6KB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.20MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.97MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.98MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.29MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.12MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.89MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.01MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.45MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-597.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.06MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-5.16MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.57MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.70MB/s(Youtube:不良林)
+      - 捷克-2.14MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.56MB/s(Youtube:不良林)
+      - 🇯🇵 日本-12.15MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1019.6KB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.20MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.97MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.98MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.29MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.12MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.89MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.01MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.45MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
@@ -52,50 +52,51 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-597.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.06MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-5.16MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.57MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.70MB/s(Youtube:不良林)
+      - 捷克-2.14MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.56MB/s(Youtube:不良林)
+      - 🇯🇵 日本-12.15MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1019.6KB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.20MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.97MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.98MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.29MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.12MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.89MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.01MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.45MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇨🇳 台湾-1019.6KB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-597.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.06MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-5.16MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.57MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.70MB/s(Youtube:不良林)
+      - 捷克-2.14MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.56MB/s(Youtube:不良林)
+      - 🇯🇵 日本-12.15MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1019.6KB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.20MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.97MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.98MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.29MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.12MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.89MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.01MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.45MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-597.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.06MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-5.16MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.57MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.70MB/s(Youtube:不良林)
+      - 捷克-2.14MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.56MB/s(Youtube:不良林)
+      - 🇯🇵 日本-12.15MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1019.6KB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.20MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.97MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.98MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.29MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.12MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.89MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.01MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.45MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
@@ -103,15 +104,15 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-597.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.06MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-5.16MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.57MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.70MB/s(Youtube:不良林)
+      - 捷克-2.14MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.56MB/s(Youtube:不良林)
+      - 🇯🇵 日本-12.15MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1019.6KB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.20MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.97MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.98MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.29MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.12MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.89MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.01MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.45MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
@@ -128,15 +129,15 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-597.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.06MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-5.16MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.57MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.70MB/s(Youtube:不良林)
+      - 捷克-2.14MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.56MB/s(Youtube:不良林)
+      - 🇯🇵 日本-12.15MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1019.6KB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.20MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.97MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.98MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.29MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.12MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.89MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.01MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.45MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
