--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,115 +5,114 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 捷克-2.14MB/s(Youtube:不良林), server: 195.133.53.192, port: 14369, type: vmess, uuid: 2331affa-1194-45ae-9457-3746120c4751, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 195.133.53.192}}
-  - {name: 🇨🇳 中国-4.56MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32001, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
   - {name: 🇯🇵 日本-12.15MB/s(Youtube:不良林), server: vjp3.0bad.com, port: 443, type: vmess, uuid: 927094d3-d678-4763-8591-e240d0bcae87, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /chat, ws-headers: {Host: vjp3.0bad.com}}
-  - {name: 🇨🇳 台湾-1019.6KB/s(Youtube:不良林), server: lc-hk03-direct01.lc-hk03.lc-node.com, port: 443, type: vmess, uuid: ec736482-173e-3eff-9114-b49df8056e7d, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: lc-hk03-direct01.lc-hk03.lc-node.com}}
-  - {name: 🇬🇧 英国-2.20MB/s(Youtube:不良林), server: 144.24.88.101, port: 16833, type: vmess, uuid: f5425ccf-3946-4fb4-eb24-5393d78a392f, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇦🇺 澳大利亚-2.34MB/s(Youtube:不良林), server: 185.167.116.250, port: 9019, type: ss, cipher: aes-256-cfb, password: GA9KzeEgvfxNrgmM}
+  - {name: 🇸🇬 新加坡-3.05MB/s(Youtube:不良林), server: 202.61.141.130, port: 443, type: vmess, uuid: aba50dd4-5484-3b05-b14a-4661caf862d5, alterId: 4, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ws, ws-headers: {Host: 202.61.141.130}}
+  - {name: 🇨🇳 中国-2.29MB/s(Youtube:不良林), server: in-tw-2.onebox6.org, port: 38201, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: in-tw-2.onebox6.org}}
+  - {name: 🇮🇳 印度-1.64MB/s(Youtube:不良林), server: jgwhdlb1.gaox.ml, port: 443, type: trojan, password: e05c749b-7c6b-41b8-9c71-9dcf685edf4a, sni: jgwhdlb1.gaox.ml, skip-cert-verify: true}
+  - {name: 🇬🇧 英国-2.26MB/s(Youtube:不良林), server: vpnu.loungers.cc, port: 56830, type: vmess, uuid: d2e92a19-f50c-426e-cd15-03ece7f4f3b1, alterId: 32, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ws/x-ui, ws-headers: {Host: vpnu.loungers.cc}}
   - {name: 🇺🇸 美国-3.97MB/s(Youtube:不良林), server: xr-1.herokuapp.com, port: 443, type: vmess, uuid: 17af76e1-a5d7-41ab-ae87-b48f185075d1, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /17af76e1-a5d7-41ab-ae87-b48f185075d1-vmess, ws-headers: {Host: xr-1.herokuapp.com}}
   - {name: 🇺🇸 美国-4.29MB/s(Youtube:不良林), server: vus4.0bad.com, port: 443, type: vmess, uuid: 927094d3-d678-4763-8591-e240d0bcae87, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /chat, ws-headers: {Host: vus4.0bad.com}}
-  - {name: 🇺🇸 美国-3.12MB/s(Youtube:不良林), server: 138.2.49.230, port: 10021, type: vmess, uuid: a12e496e-f89a-434a-8011-108846f0e412, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 138.2.49.230}}
   - {name: 🇺🇸 美国-5.01MB/s(Youtube:不良林), server: vus2.0bad.com, port: 443, type: vmess, uuid: 927094d3-d678-4763-8591-e240d0bcae87, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /chat, ws-headers: {Host: vus2.0bad.com}}
-  - {name: 🇺🇸 美国-5.45MB/s(Youtube:不良林), server: trus.moonfree.top, port: 443, type: trojan, password: 4863e1b2-ec2f-4c71-b862-ce533028e57e, sni: trus.moonfree.top, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-5.30MB/s(Youtube:不良林), server: trus.moonfree.top, port: 443, type: trojan, password: 4863e1b2-ec2f-4c71-b862-ce533028e57e, sni: trus.moonfree.top, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 捷克-2.14MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.56MB/s(Youtube:不良林)
       - 🇯🇵 日本-12.15MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1019.6KB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.20MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.34MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.05MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.29MB/s(Youtube:不良林)
+      - 🇮🇳 印度-1.64MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.26MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.97MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.29MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.12MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.01MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.45MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.30MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 捷克-2.14MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.56MB/s(Youtube:不良林)
       - 🇯🇵 日本-12.15MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1019.6KB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.20MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.34MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.05MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.29MB/s(Youtube:不良林)
+      - 🇮🇳 印度-1.64MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.26MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.97MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.29MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.12MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.01MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.45MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.30MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 捷克-2.14MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.56MB/s(Youtube:不良林)
       - 🇯🇵 日本-12.15MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1019.6KB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.20MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.34MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.05MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.29MB/s(Youtube:不良林)
+      - 🇮🇳 印度-1.64MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.26MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.97MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.29MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.12MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.01MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.45MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.30MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇨🇳 台湾-1019.6KB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 捷克-2.14MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.56MB/s(Youtube:不良林)
       - 🇯🇵 日本-12.15MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1019.6KB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.20MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.34MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.05MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.29MB/s(Youtube:不良林)
+      - 🇮🇳 印度-1.64MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.26MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.97MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.29MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.12MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.01MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.45MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.30MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 捷克-2.14MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.56MB/s(Youtube:不良林)
       - 🇯🇵 日本-12.15MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1019.6KB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.20MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.34MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.05MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.29MB/s(Youtube:不良林)
+      - 🇮🇳 印度-1.64MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.26MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.97MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.29MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.12MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.01MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.45MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.30MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 捷克-2.14MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.56MB/s(Youtube:不良林)
       - 🇯🇵 日本-12.15MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1019.6KB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.20MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.34MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.05MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.29MB/s(Youtube:不良林)
+      - 🇮🇳 印度-1.64MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.26MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.97MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.29MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.12MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.01MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.45MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.30MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 捷克-2.14MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.56MB/s(Youtube:不良林)
       - 🇯🇵 日本-12.15MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1019.6KB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.20MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.34MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.05MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.29MB/s(Youtube:不良林)
+      - 🇮🇳 印度-1.64MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.26MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.97MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.29MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.12MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.01MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.45MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.30MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
